--- a/fontscale.sty
+++ b/fontscale.sty
@@ -1,6 +1,6 @@
 % Package   : fontscale -- A user interface for setting document font sizes
 % Copyright : 2024 (c) Oliver Beery <beeryoliver@gmail.com>
-% Repository: <ADD GITHUB LINK HERE>
+% Repository: https://github.com/beeryoliver/fontscale
 % License   : The LaTeX Project Public License 1.3c
 
 % The 2022-06-01 LaTeX kernel update added \ProcessKeyOptions.
