--- a/fontscale.sty
+++ b/fontscale.sty
@@ -1,5 +1,6 @@
 % Package   : fontscale -- A user interface for setting document font sizes
 % Copyright : 2024 (c) Oliver Beery <beeryoliver@gmail.com>
+% CTAN      : https://ctan.org/pkg/fontscale
 % Repository: https://github.com/beeryoliver/fontscale
 % License   : The LaTeX Project Public License 1.3c
 
@@ -7,8 +8,8 @@
 \NeedsTeXFormat{LaTeX2e}[2022-06-01]
 \ProvidesExplPackage
   {fontscale}
-  {2024-03-04}
-  {1.0.0}
+  {2024-03-08}
+  {1.0.1}
   {A user interface for setting document font sizes}
 
 % The 2023-10-10 l3kernel update added many 'e'-variants.
